Add Altair Description

--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
 <div class="w3-bar w3-theme">
   <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="openGame(event,'Rect')">Rect</button>
   <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="openGame(event,'Elevator')">Elevator</button>
-  <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="openGame(event,'Game3')">Altair</button>
-  <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="openGame(event,'Game4')">Artificial</button>
+  <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="openGame(event,'Altair')">Altair</button>
+  <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="openGame(event,'Artificial')">Artificial</button>
   <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="openGame(event,'Game5')">Lasers</button>
   <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="openGame(event,'Game6')">Powervoid</button>
   <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="openGame(event,'Game7')">Over the Threshold</button>
@@ -282,6 +282,7 @@
     <img class="slide w3-animate-opacity" src="content\Rect_Screenshot1.png" style="width:100%">
     <img class="slide w3-animate-opacity" src="content\Rect_Screenshot2.png" style="width:100%">
     <img class="slide w3-animate-opacity" src="content\Rect_Screenshot3.png" style="width:100%">
+    <img class="slide w3-animate-opacity" src="content\DeakTer.jpg" style="width:100%">
     <a class="slideshow-button plus w3-button w3-hover-dark-grey" style="position:absolute;top:45%;left:0;">❮</a>
     <a class="slideshow-button minus w3-button w3-hover-dark-grey" style="position:absolute;top:45%;right:0;">❯</a>
   </div>
@@ -403,11 +404,66 @@
   </p>
 </div>
 
-<div id="Game3" class="w3-container game w3-animate-opacity">
-  <h2>Altair</h2>
-  <p></p>
+<div id="Altair" class="w3-container game w3-animate-opacity">
+  <div class="slideshow w3-content" style="max-width:800px;position:relative">
+    <img class="slide w3-animate-opacity" src="content\AltairTitle.png" style="width:100%">
+    <img class="slide w3-animate-opacity" src="content\Altair_screenshot1.png" style="width:100%">
+    <img class="slide w3-animate-opacity" src="content\Altair_screenshot2.png" style="width:100%">
+    <img class="slide w3-animate-opacity" src="content\Altair_screenshot3.png" style="width:100%">
+    <a class="slideshow-button plus w3-button w3-hover-dark-grey" style="position:absolute;top:45%;left:0;">❮</a>
+    <a class="slideshow-button minus w3-button w3-hover-dark-grey" style="position:absolute;top:45%;right:0;">❯</a>
+  </div>
+  <p>Altair is a 3D first-person exploration-puzzle game I've worked on 2013-2014 as my Year-long project in highschool.</p>
+  <p>
+    Oh boy. The story of Altair is more a cautionary tale. I've discovered the world of game development at around mid-2013. I was amazed. I thought I could do anything.
+    I was wrong. After building a couple prototypes for moving around in first person, I thought it was a good idea to start working on a full length first-person game as my year-long project. That seems perfectly reasonable.
+    I was wrong. I thought I should start writing lore, come up with characters and a story, design a map, and of course, fill it with puzzles. Because that's what a game is supposed to be.
+    Wrong. Wrong. Wrong. Luckily the friends who I was pitching ideas to convinced me not to do my original idea, which was a Portal-like puzzle platformer with some witty AI. That would have been an even bigger disaster. Here is a hint: you may think you're as funny as professional writers with years of experience, but you're not.
+  </p>
+  <p>
+    Here is just a taste of all the things I've tried to include in this game, and got wrong
+  </p>
+  <ul>
+    <li>Have a strong and distinct atosphere! It was just dark. Way too dark.</li>
+    <li>Animated graphics! They didn't fit or light properly.</li>
+    <li>Multiple abandoned areas! It was way too big, ofter wrong proportions, and felt empty because populating 3D environments is very difficult to get right.</li>
+    <li>Voice acting! My biggest thanks to the couple people I managed to drag into my schools radio studio and record a script. Then the editing rouined it. Too fast, no breaks, difficult to understand.</li>
+    <li>Story! I didn't write it. It was a friend, who actually came up with a very competent back story for the game, (it's almost like people can do a good job if they focus on one thing they're good at and don't try to do everyting) but we've scoped it to be way to big, so none of it made it into the game, except for a wall of text in the menu and a single audio log. (Again, huge thanks to the people who recorded it)</li>
+    <li>Realistic graphics! They mostly just looked bad. Scaling was off, they were too big and unoptimised, meaning that the game was just slow, but fear not, they were also uninteresting.</li>
+    <li>Puzzles! By trying to make realistic equipment, where interaction would mirror real interactions with the objects, I just managed to create a set of disjointed puzzles, where solving one did not aid in solving any other ones, but also very difficult to figure out how to progress, without getting hints.</li>
+    <li>Sound effects! Volumes were all over the place, and step sounds were seemingly random.</li>
+    <li>High fidelity models! The game ran terribly. Also, it was both busy and uninteresting at the same time, lacking the industrial beauty of real equipments, with lots of details where you know everything has a purpose. They also took way to long to make. I've spent more time making 3D models than programming the game, the part I've really enjoyoed.</li>
+    <li>And many more...</li>
+  </ul>
+  <p>
+    Certanly every one of these issues could've been avoided or fixed, but not all of them, or at least not in one year. I bit of more than I could chew, and than stubbornly kept at it, not seeing most of these flaws on a project that I've dedicated so much time to.
+    Based on how critical I am with this project now, you might think I consider this project a failure. I don't. Don't get me wrong, I don't think I've made a good game, but I've learnt so much from this, that at the end of the day I'm happy I've tried this. And you should be too, because it's a mistake you don't have to make.
+  </p>
+  <p>
+    If looking at the above list of failiures you still think, that you want to attempt a big, feature length 3D game as your first, you know what I understand. I also thought that "to hell with anyone who thinks otherwise, I'm building the game of my dreams!".
+    I do hope, that you listen to me, and start small. I am so much prouder of some games that I've built in a weekend, than this that I've worked months on. But if you insist on building something big, at least try to learn from it, as much as you could. Here are some of the things I've learnt from this project:
+  </p>
+  <ul>
+    <li>Time management: deadlines are the worst. But they're a fact of game development as much as they're a fact of life. And I was lucky enought to be force into setting multiple deadlines throughout the year, which I had to hit. I've learnt so much about setting my scope for a game correctly (or cutting down on the scope as the deadline approached) and forward planning.</li>
+    <li>3D modelling: It's not a skill that I've used for games since, but one that was crucial for doing Computer Aided Design (CAD) during university.</li>
+    <li>Programming: this was essentially a year long bootcamp on having to solve difficult problems. A lot of programming is learning specific skills, methods, design patterns, etc, but a lot of it is just putting in your time, and gaining experience.</li>
+    <li>Working with people: whether it be running design sessions, or directing my friends in the studio, I've learnt a lot of so called soft-skills from this project. Although my key takeaway at the time was that it was way too hard.</li>
+  </ul>
+  <p>
+    You can get the source code <a href="https://drive.google.com/drive/folders/1m6aIykz5zjKiEfZHAYN7E1IQy5oef31w?usp=sharing" target="_blank">from this link</a> if you really feel like exploring this disaster of a game. Unity 4.6.6 from the <a href="https://unity3d.com/get-unity/download/archive" target="_blank">Unity Archive</a> as for some of the others.
+    I don't think there are really key takeaways here, other than to start small, and build games you can actually finish. Or build your dream game, I won't stop you!
+  </p>
+  <p>
+    There is no list of things you should try with the source code for this project. You can try fixing some of the issues, but it's not worth your effort, instead, tell me about one of your projects that turned out to be a disaster, because it was too big.
+    Tell me about what you've learnt from it! Email me on tituszban@gmail.com, or message me on <a href="https://www.linkedin.com/in/tituszban/" target="_blank">LinkedIn</a>.
+  </p>
 </div>
-<div id="Game4" class="w3-container game w3-animate-opacity">
+<div id="Artificial" class="w3-container game w3-animate-opacity">
+  <div class="slideshow w3-content" style="max-width:800px;position:relative">
+    <img class="slide w3-animate-opacity" src="content\ArtificialColler.png" style="width:100%">
+    <a class="slideshow-button plus w3-button w3-hover-dark-grey" style="position:absolute;top:45%;left:0;">❮</a>
+    <a class="slideshow-button minus w3-button w3-hover-dark-grey" style="position:absolute;top:45%;right:0;">❯</a>
+  </div>
   <h2>Artificial</h2>
   <p></p>
 </div>
