Add Artificial description

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 <hr>
 <div id="games" class="w3-center">
     <h2>Games</h2>
-    <p>Some games</p>
+    <p>Here is a selection of my games that I think are worthy of discussion.</p>
   </div>   
 <div class="w3-border">
 <div class="w3-bar w3-theme">
@@ -269,10 +269,10 @@
   <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="openGame(event,'Elevator')">Elevator</button>
   <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="openGame(event,'Altair')">Altair</button>
   <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="openGame(event,'Artificial')">Artificial</button>
-  <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="openGame(event,'Game5')">Lasers</button>
+  <!-- <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="openGame(event,'Game5')">Lasers</button>
   <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="openGame(event,'Game6')">Powervoid</button>
   <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="openGame(event,'Game7')">Over the Threshold</button>
-  <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="openGame(event,'Game8')">Rabble Party</button>
+  <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="openGame(event,'Game8')">Rabble Party</button> -->
 </div>
 
 <div id="Rect" class="w3-container game w3-animate-opacity">
@@ -376,7 +376,7 @@
   </p>
   <p>
     This too, is an older game, so you'll have to grab an older version of Unity from the <a href="https://unity3d.com/get-unity/download/archive" target="_blank">Unity Archive</a>. For this too, I've used 4.6.6, and it worked just fine.
-    You can download the <a href="https://drive.google.com/drive/folders/1lbyEzBWRHT8vzjr4IpxK7Gd7uqZPnLhF?usp=sharing" target="_blank">full source from here</a>
+    You can download the <a href="https://drive.google.com/open?id=1m6aIykz5zjKiEfZHAYN7E1IQy5oef31w" target="_blank">full source from here</a>
   </p>
   <p>
     Key takeaways:
@@ -461,13 +461,88 @@
 <div id="Artificial" class="w3-container game w3-animate-opacity">
   <div class="slideshow w3-content" style="max-width:800px;position:relative">
     <img class="slide w3-animate-opacity" src="content\ArtificialColler.png" style="width:100%">
+    <img class="slide w3-animate-opacity" src="content\Artificial1.jpg" style="width:100%">
+    <img class="slide w3-animate-opacity" src="content\Artificial2.jpg" style="width:100%">
+    <img class="slide w3-animate-opacity" src="content\Artificial3.jpg" style="width:100%">
     <a class="slideshow-button plus w3-button w3-hover-dark-grey" style="position:absolute;top:45%;left:0;">❮</a>
     <a class="slideshow-button minus w3-button w3-hover-dark-grey" style="position:absolute;top:45%;right:0;">❯</a>
   </div>
-  <h2>Artificial</h2>
-  <p></p>
+  <p>Artificial is a 2D narrative driven arcade game I've developed with a couple others for the Indies VS Pewdiepie gamejam in November 2014</p>
+  <p>
+    A bit of context about game jams and this one in particular. Game jams are special. While they're technically competitions, it's more an opportunity for free creative expression.
+    There's a common saying that creativity flourishes within restrictions. Game jams are the embodiment of this idea. You have 48-72 hours, and sometimes a concept/theme (but not always).
+    And with that blank canvas, you're invited to build something. It's stressfull, and sometimes what comes out isn't spectecular, but sometimes, something special is created.
+    You also get to experiment with ideas and collaborate with new people. This game jam in particular was the Indies vs Pewdiepie gamejam in 2014.
+    This was a one of game jam hosted by online game hosting site gamejolt with YouTuber Pewdiepie. At this point he was already a well known creator, but it was before he became a YouTube superstar, and before his various controversies.
+  </p>
+  <p>
+    I think this was my first proper game jam and I took it very seriously. I've recruited two artists and a musitian, just on some online forum, and got my best friend involved to do some design and writing.
+    Funny story, during the first day of the jam I was busy recieveing an award for Rect in the <19 freestyle programming competition, but I ran off right after the award ceremony, to go over to my friend's and work on this game.
+    I've always cared more about building things than recieving praise for them.
+  </p>
+  <p>
+    Please note, as this is a story heavy game, and the following discussion will contain spoliers for said story, I strongly recommend playing it first, and than reading this.
+    Here is a link for it: <a href="https://gamejolt.com/games/artificial/39478" target="_blank">Artificial on GameJolt</a>
+  </p>
+  <p>
+    From this point, I'll assume that you've played the game. So there we were, my friend and I and two artists online, looking for an idea.
+    It's difficult to pinpoint, what inspired us to do create this game, but there are a couple things that lead us to creating this game.
+    First of all, round this time both me and my friend were obsessed with Thomas Was Alone, a brilliant, werid indie platformer by Mike Bithel that featured some amazing characters who were also happend to be rectangles. This inspired the antrophomirfisms of the characters and the style of the narration.
+    Second, we had two really talented artists, who have completely different artstyles. It's a game jam. You can't interview people, you take artists as they come and come up with something to fit them. This inspired the split world idea, so both of them can work in their own style.
+    Last, my friend was a brilliant writer even at this point, so we decided to make this a story focused game.
+  </p>
+  <p>
+    The first big obstacle we overcame was getting a voice-over artist. At this point I was a huge fan of HocGaming, a YouTube channel mostly doing Kerbal Space Program gameplay. It was ran by Harv, who has an amazing voice.
+    We've emailed him early into the project, asked him if he wanted to do the voiceover, and to our surprise, he said yes. This sealed in that we wanted the game focusing on narration.
+  </p>
+  <p>
+    So let's talk about the game itself. Wanting to do multiple smaller games, we've decided to make them simple acrade games, simply so there'd be nothing to explain for the people, instead they can understand each of the four games, just by looking at them. Shoot the baloons, save the people, escape from the lava, find the objects in the maze.
+    which could very easily lead into, through the collapse of their reality, the real objective of the four characters, defend the city, destory the towns, escape from the firewall and provide hacking support.
+    If you haven't played the game, I imagine this last sentance was very confusing.
+  </p>
+  <p>
+    So step one: create the four games, and a way to jump between them. Step two was, having a slider, to controll the probability of "reality peaking through", which required the randomised replacement of sprites, with a given probability.
+    And then step three was, wiring up a narrative. This was the first time I ever had to do this. It was not easy. I still remember clearly, the deadline was 7 in the morning on a Monday, and from around 10 o'clock last night all I did was story scripting.
+    Everything else was done, the artists and composers did a top-notch job, and delivered everything on time. All the animations in place, all the soundeffects triggering. Harv also delivered an amazing set of narration files. It was all in place, I just had to make it bring it all together.
+    At this point I was at home, and from 10 to 7 the next day, I was scripting the story up, with my friend kept the life in me by chatting over Skype. But it was done. It worked and we watched the upload bar racing the end-of-jam countdown. I'm gratefull to my mum that I didn't have to go to school that day.
+  </p>
+  <p>
+    To this day, this is one of the games I'm proudest of. It came together beautifully. Not to say that it's perfect. I've plaid it today, and while I was wowed by how well it still worked, I realised that it was increadibly difficult. I've failed some levels over a dozen times.
+    And it makes one of the mistakes that underpolised games oftem make, that if you replay a level, you have to listen to the same narration over-and-over again. The only thing saving it, was how good Harv sounds, but I can see how this could have been really annoying.
+    It also fails to explain why some screens get locked. I've realised that the person who was different, the black balloon, the gold nugget and fourth thing to find in the maze were the reason this happened after I've plaid, by reading a text file in there. The red border communicates that something is going on well, but what is that thing should've been better explained.
+    Lastly, the biggest mistake of all, which is somewhat related to it being too hard, was that two of the games were not really necessary. Nothing happens, if you don't save the people as the ambulance, and you can just hide in the corner from the cars, so Natalie can be ignored. And poor Glen, while he wants to provide support, if the player has no time, they can't use him to help the others.
+    I think there should have been more significant gaps, where the player have time to fix up the other games with Glen.
+  </p>
+  <p>As always, <a href="https://drive.google.com/open?id=1VE2ySVTegiMyjWtz9ZEnU7Q8qa_fl9_k" target="_blank">get the full source code</a> and an older version of Unity (4.6.6) from the <a href="https://unity3d.com/get-unity/download/archive" target="_blank">Unity Archive</a> to see this project for yourself.</p>
+  <p>
+    So what are the key takeaways from all this?
+  </p>
+  <ul>
+    <li>
+      Participate in Game Jams. It's an excellent way to try new things, meet new people and learn new skills.
+    </li>
+    <li>
+      If you have access to a good writer, gameplay can become secondary to the story, as long as they complement each other, not just exists in parrallel to one and other.
+    </li>
+    <li>
+      Turn weaknesses of the project into strength. We could've tried have the two artists emulate each other's style, but instead we let each focus on how they work, and used it to create something unique.
+    </li>
+    <li>
+      Have good people in your life who enable you to spend the whole night working on something you love.
+    </li>
+  </ul>
+  <p>
+    What you should try with the source code:
+  </p>
+  <ul>
+    <li>Tweaking the difficulty should be fearly easy, see if you can make some of the sections easier while not making it too easy, so it becomes not fun</li>
+    <li>Try to introduce gaps, mostly in the balloon game, so the player has time to breathe and maybe use the mouse to help the others.</li>
+    <li>See if you can fix the car spawning logic in the ambulance game, so you can't just hide in a corner.</li>
+    <li>Think of ways to better communicate why screens are getting locked. Maybe try the same red colour scheme around the culprits of the locking.</li>
+  </ul>
+  <p>You're welcome to show me what you made out of it or any of your game jam games. Email me on tituszban@gmail.com, or message me on <a href="https://www.linkedin.com/in/tituszban/" target="_blank">LinkedIn</a>.</p>
 </div>
-<div id="Game5" class="w3-container game w3-animate-opacity">
+<!-- <div id="Game5" class="w3-container game w3-animate-opacity">
   <h2>Lasers</h2>
   <p></p>
 </div>
@@ -485,7 +560,7 @@
 <div id="Game8" class="w3-container game w3-animate-opacity">
   <h2>Rabble Party</h2>
   <p></p>
-</div>
+</div> -->
 </div>
 
 <hr>     
@@ -498,12 +573,14 @@
 </header>
 
 <div class="w3-padding w3-white w3-display-container">
-  <h3>Can I publish these games under my name?</h3>
+  <h3>Can I publish these games?</h3>
   <p>No.</p>
-  <h3>Can I use parts of these in my own original games?</h3>
+  <h3>Can I use parts of the code in my own original games?</h3>
   <p>Yes</p>
   <h3>Can I use any of the assets (sounds, images, story writing, etc) in my own projects?</h3>
   <p>No. A lot of the assets here I have not made myself so I cannot let you just use them.</p>
+  <h3>So can I use all the code with my own assets and publish those?</h3>
+  <p>...No.</p>
   <h3>Can I run the projects, try them, learn from them?</h3>
   <p>Yes, that's the point.</p>
 </div>
